# cinnamon-control-center

./: configure.ac
panels/common/: Makefile.am  cinnamon-settings-bus.h  csd-device-manager-udev.c  csd-device-manager-udev.h  csd-device-manager-x11.c  csd-device-manager-x11.h  csd-device-manager.c  csd-device-manager.h  csd-input-helper.c  csd-input-helper.h
panels/display/: cc-display-panel.c  display-capplet.ui
panels/wacom/: Makefile.am  cc-tablet-tool-map.c  cc-wacom-button-row.c  cc-wacom-button-row.h  cc-wacom-device.c  cc-wacom-device.h  cc-wacom-mapping-panel.c  cc-wacom-page.c  cc-wacom-panel.c  cc-wacom-panel.h  cc-wacom-stylus-page.c  cc-wacom-tool.c  cc-wacom-tool.h  cinnamon-wacom-panel.desktop.in.in  csd-enums.h  csd-wacom-key-shortcut-button.c  csd-wacom-key-shortcut-button.h  test-wacom.c  wacom.gresource.xml
panels/wacom/calibrator/: Makefile.am
